--- a/src/modules/screen/CMakeLists.txt
+++ b/src/modules/screen/CMakeLists.txt
@@ -1,19 +1,40 @@
 cmake_minimum_required (VERSION 2.6)
 project (screen)
 
-set(SOURCES
-	consumer/screen_consumer.cpp
+if (APPLE)
+	set(SOURCES
+		consumer/metal/metal_screen_consumer.mm
+		consumer/screen_consumer.cpp
 
-	screen.cpp
-)
-set(HEADERS
-	consumer/screen_consumer.h
+		screen.cpp
+	)
+	set(HEADERS
+		consumer/metal/metal_screen_consumer.h
+		consumer/screen_consumer.h
 
-	consumer_screen_vertex.h
-	consumer_screen_fragment.h
+		screen.h
+	)
+else ()
+	set(SOURCES
+		consumer/ogl/ogl_screen_consumer.cpp
+		consumer/screen_consumer.cpp
 
-	screen.h
-)
+		screen.cpp
+	)
+	set(HEADERS
+		consumer/screen_consumer.h
+		consumer/ogl/ogl_screen_consumer.h
+
+		consumer_screen_vertex.h
+		consumer_screen_fragment.h
+
+		screen.h
+	)
+
+	include_directories(${GLEW_INCLUDE_PATH})
+	include_directories(${SFML_INCLUDE_PATH})
+endif ()
+
 
 bin2c("consumer/screen.vert" "consumer_screen_vertex.h" "caspar::screen" "vertex_shader")
 bin2c("consumer/screen.frag" "consumer_screen_fragment.h" "caspar::screen" "fragment_shader")
@@ -36,8 +57,6 @@ include_directories(../..)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${BOOST_INCLUDE_PATH})
 include_directories(${TBB_INCLUDE_PATH})
-include_directories(${GLEW_INCLUDE_PATH})
-include_directories(${SFML_INCLUDE_PATH})
 include_directories(${FFMPEG_INCLUDE_PATH})
 
 set_target_properties(screen PROPERTIES FOLDER modules)
